Mobile overflow fix. Video improvements. Slideshow improvements. Disabled produce.js alerts.

--- a/css/hpstyle.css
+++ b/css/hpstyle.css
@@ -1,6 +1,14 @@
-
-#home-page {
+body {
   overflow-x: hidden;
+}
+
+#hp_content {
+  left: 0px;
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
+  width: 100vw;
+  overflow: hidden;
 }
 
 /***********
@@ -215,6 +223,11 @@
   /*background-color: rgb(203, 168,143);*/
 }
 
+#principle_frame #principle_title {
+  color: #222222;
+  text-align: center;
+}
+
 #principle_container {
   display: flex;
   flex-direction: row;
@@ -288,17 +301,25 @@
 ************/
 #vid_container_frame {
   margin-top: 50px;
-  background-color: gainsboro;
+  /*background-color: gainsboro;*/
+  background-color: inherit;
   width: 100%;
   padding-top: 30px;
   padding-bottom: 30px;
 }
 #video_container {
-  margin: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: inherit;
   overflow: hidden;
-  width: 100vw;
+  width: 90vw;
   padding: 0px;
+  border-style: solid;
+  border-width: 0px;
+  border-color: black;
+  border-radius: 10px;
 }
 #video_container #player {
   display: relative;
